# autotrace2

./: .gitignore  LICENSE  README.md  autotrace2.cabal  stack.yaml
app/: API.hs  AppM.hs  Config.hs  Main.hs  Schema.hs  SchemaTypes.hs  Time.hs
app/Apc/: API.hs  Calculate.hs  Links.hs  Site.hs  Views.hs
app/Apc/Issue/: API.hs  Links.hs  Site.hs  Views.hs
app/Area/: API.hs  Calculate.hs  Links.hs  Site.hs  Types.hs  Views.hs
app/Area/Queries/: IntervalsDuring.hs
app/Blc/: API.hs  Calculate.hs  Enums.hs  Links.hs  Queries.hs  Site.hs  Types.hs  Views.hs
app/Blc/Queries/: AreaResult.hs  BlcResult.hs  DescendantBlcs.hs  Durations.hs
app/Block/: API.hs  Links.hs  Site.hs  Views.hs
app/Common/: Links.hs  PackErrMiddleware.hs  Responses.hs  Views.hs
app/Home/: Handlers.hs  Links.hs  Routes.hs  Views.hs
app/Job/: Handlers.hs  Links.hs  Routes.hs  ScheduleJob.hs  Types.hs  Views.hs
app/Lopc/: Enums.hs  Handlers.hs  Links.hs  Routes.hs  Types.hs  Views.hs
app/Search/: API.hs  Site.hs  Types.hs  Views.hs
app/User/: AuthMiddleware.hs  Enums.hs  GetUser.hs  Handlers.hs  Links.hs  RequireAuth.hs  Routes.hs  Types.hs  Views.hs
src/: FileUpload.hs  PersistKeyInstances.hs  Time.hs  TimeSeriesData.hs
src/Block/: Parse.hs
src/TimeSeriesData/: Arithmetic.hs  Changes.hs  Compares.hs  Counts.hs  Expressions.hs  Interpolate.hs  Retrieve.hs  Summary.hs  Types.hs
static/: apc.js  apcs.js  cvChart.js  lopc.js  style.css
