name:                autotrace2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/hectorhon/autotrace2#readme
license:             BSD3
license-file:        LICENSE
author:              Hector Hon
maintainer:          hon.lianhung@gmail.com
copyright:           2015 Hector Hon
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TimeSeriesData, Time
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , time
                     , either
                     , mtl
                     , attoparsec
                     , parsec
                     , http-types
                     , servant-server
                     , servant-client
  default-language:    Haskell2010

executable autotrace2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , either
                     , transformers
                     , monad-logger
                     , mtl
                     , wai
                     , warp
                     , wai-middleware-static
                     , http-types
                     , network-uri
                     , servant-server
                     , servant-blaze
                     , blaze-html
                     , persistent-postgresql
                     , persistent-template
                     , autotrace2
  default-language:    Haskell2010

test-suite autotrace2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , autotrace2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hectorhon/autotrace2
