name:                autotrace2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/hectorhon/autotrace2#readme
license:             BSD3
license-file:        LICENSE
author:              Hector Hon
maintainer:          hon.lianhung@gmail.com
copyright:           2015 Hector Hon
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TimeSeriesData, Time, Block.Parse, FileUpload
                     , PersistKeyInstances
  other-modules:       TimeSeriesData.Types
                     , TimeSeriesData.Retrieve
                     , TimeSeriesData.Compares
                     , TimeSeriesData.Arithmetic
                     , TimeSeriesData.Counts
                     , TimeSeriesData.Changes
                     , TimeSeriesData.Expressions
                     , TimeSeriesData.Interpolate
                     , TimeSeriesData.Summary
  ghc-options:         -Wall -O
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , time
                     , either
                     , resourcet
                     , mtl
                     , attoparsec
                     , persistent-postgresql
                     , parsec
                     , http-types
                     , aeson
                     , servant-server
                     , servant-client
                     , wai-extra
  default-language:    Haskell2010

executable autotrace2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       API
                     , AppM
                     , Area.Types
                     , Area.API
                     , Area.Links
                     , Area.Site
                     , Area.Views
                     , Area.Calculate
                     , Area.Queries.IntervalsDuring
                     , Blc.Types
                     , Blc.Enums
                     , Blc.API
                     , Blc.Links
                     , Blc.Site
                     , Blc.Views
                     , Blc.Calculate
                     , Blc.Queries
                     , Apc.API
                     , Apc.Links
                     , Apc.Site
                     , Apc.Views
                     , Apc.Calculate
                     , Apc.Issue.API
                     , Apc.Issue.Links
                     , Apc.Issue.Site
                     , Apc.Issue.Views
                     , Block.API
                     , Block.Links
                     , Block.Site
                     , Block.Views
                     , Search.Types
                     , Search.API
                     , Search.Site
                     , Search.Views
                     , Common.Links
                     , Common.Responses
                     , Common.Views
                     , Common.PackErrMiddleware
                     , Home.Routes
                     , Home.Handlers
                     , Home.Links
                     , Home.Views
                     , Config
                     , Schema
                     , SchemaTypes
                     , User.Types
                     , User.Enums
                     , User.RequireAuth
                     , User.AuthMiddleware
                     , User.Handlers
                     , User.Links
                     , User.Routes
                     , User.Views
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , either
                     , transformers
                     , monad-logger
                     , mtl
                     , unordered-containers
                     , containers
                     , wai
                     , warp
                     , wai-middleware-static
                     , http-types
                     , network-uri
                     , servant-server
                     , servant-blaze
                     , blaze-html
                     , aeson
                     , persistent-postgresql
                     , persistent-template
                     , esqueleto
                     , pwstore-fast
                     , random
                     , cookie
                     , blaze-builder
                     , autotrace2
  default-language:    Haskell2010

test-suite autotrace2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , autotrace2
                     , mtl
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hectorhon/autotrace2
